// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteAdminProductSubscriptionBillingLink linked billing 1`] = `
<DocumentFragment>
  <div
    class="site-admin-product-subscription-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <a
        class="anchorLink mr-2 d-flex align-items-center"
        href="https://example.com"
      >
        View billing subscription 
        <svg
          aria-hidden="true"
          class="iconInline ml-1"
          fill="currentColor"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
          />
        </svg>
      </a>
      <button
        class="btn btnSecondary btnSm"
        type="button"
      >
        Unlink
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SiteAdminProductSubscriptionBillingLink no linked billing 1`] = `
<DocumentFragment>
  <div
    class="site-admin-product-subscription-billing-link"
  >
    <div
      class="d-flex align-items-center"
    >
      <button
        class="btn btnSecondary btnSm"
        type="button"
      >
        Link billing subscription
      </button>
    </div>
  </div>
</DocumentFragment>
`;
